--- a/sic/templates/story.html
+++ b/sic/templates/story.html
@@ -21,15 +21,15 @@
                     {{story.karma}}
                 </div>
             </div>
-            <h1 class="story-title"><a href="{{story.get_listing_url}}">{{ story.title }}</a>{% with story.get_domain as domain %} <span class="netloc">{{ domain|default_if_none:"text" }}</span>{% endwith %}</h1>
+            <h1 class="story-title"><a href="{{story.get_listing_url}}" rel="external nofollow noreferrer">{{ story.title }}</a>{% with story.get_domain as domain %} <span class="netloc">{{ domain|default_if_none:"text" }}</span>{% endwith %}</h1>
             {% if story.publish_date %}<span>Published: <time datetime="{{ story.publish_date | date:"Y-m-d" }}" title="{{ story.publish_date }}">{{ story.publish_date|naturalday }}</time></span>{% endif %}
-            {% include "story_tags.html" with tags=story.tags.all %}
+            {% include "story_tags.html" with tags=story.tags.all in_article=True %}
             {% if not story.tags.exists and request.user == story.user %}
                 <ul class="messagelist">
                     <li class="warning">A story <em>should</em> have at least one tag. Add some tags by <a href="{% url 'edit_story' story_pk=story.pk slug=story.slugify %}">editing the story</a>.</li>
                 </ul>
             {% endif %}
-            <div class="links">{% if story.user.avatar and show_avatars %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}">{{ story.created|naturaltime }}</time> {% if story.user == request.user or request.user.is_moderator %}| <a href="{% url 'edit_story' story_pk=story.pk slug=story.slugify %}">edit</a> {% endif%}| {% if request.user.is_authenticated %}flag | <a href="{% url_with_next 'bookmark_story' story.pk request %}">{% if is_bookmarked %}un{% endif %}bookmark</a> |{% endif %} {% if story.url %}<a rel="nofollow external" href="http://archive.is/timegate/{{ story.url }}">archived</a> |{% endif %} <a href="{{story.get_absolute_url}}">{{ story.active_comments.count }} comments</a></div>
+            <div class="links">{% if story.user.avatar and show_avatars %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}" {% if story.user_is_author %} rel="author"{% endif %}>{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}">{{ story.created|naturaltime }}</time> {% if story.user == request.user or request.user.is_moderator %}| <a href="{% url 'edit_story' story_pk=story.pk slug=story.slugify %}">edit</a> {% endif%}| {% if request.user.is_authenticated %}flag | <a href="{% url_with_next 'bookmark_story' story.pk request %}">{% if is_bookmarked %}un{% endif %}bookmark</a> |{% endif %} {% if story.url %}<a rel="nofollow external" href="http://archive.is/timegate/{{ story.url }}">archived</a> |{% endif %} <a href="{{story.get_absolute_url}}" rel="bookmark">{% with story.active_comments.count as active_comments %}{{ active_comments }} comment{{ active_comments|pluralize }}{% endwith %}</a></div>
         </header>
         <a href="{{story.url}}">{{ story.url }}</a>
         {% if story.description %}
