--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -76,7 +76,7 @@
                         <input type="submit" value="Submit">
                         <details class="formatting-help">
                             <summary>Formatting help</summary>
-                            <span>{% include "markdown_help.html" %}</span>
+                            <div>{% include "markdown_help.html" %}</div>
                         </details>
                     </div>
                 </form>
