--- a/sic/templates/markdown_help.html
+++ b/sic/templates/markdown_help.html
@@ -71,7 +71,7 @@
                 [1]: http://url/b.jpg
             </td>
             <td>
-                <svg idth="50" height="50" viewBox="0 0 512 512">
+                <svg width="50" height="50" viewBox="0 0 512 512">
                     <path d="M37.8 237.8h14.6v12.6H37.8zM37.8 269.3h14.6v12.6H37.8zM37.8 174.9h14.6v12.6H37.8zM37.8 206.4h14.6V219H37.8zM37.8 300.8h14.6v12.6H37.8zM37.8 332.3h14.6v12.6H37.8zM37.8 143.4h14.6V156H37.8zM73.4 237.8h35v12.6h-35zM73.4 269.3h76.7v12.6H73.4zM73.4 174.9h403.1v12.6H73.4zM73.4 206.4h294.2V219H73.4zM73.4 300.8H247v12.6H73.4zM73.4 332.3h134.7v12.6H73.4zM73.4 143.4h43.1V156H73.4z"></path>
                     <circle cx="40.8" cy="97.3" r="6.2"></circle>
                     <circle cx="62.9" cy="97.3" r="6.2"></circle>
