--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -4,12 +4,12 @@
 {% block title %}sic{% endblock %}
 {% block content %}
     {% if aggregations %}
-        {% if not has_subscriptions %}<span class="showing-aggregations">You have no subscriptions, viewing default aggregations.</span>{% endif %}
-        <span class="showing-aggregations">Showing stories from <ul class="inline-comma-sep-list">{% for agg in aggregations.list %}<li><a href="{{ agg.get_absolute_url }}">{{ agg.name }}</a></li>{% if forloop.last and aggregations.others %}<li><details><summary>{{ aggregations.others|length }} others</summary>:<ul class="inline-comma-sep-list">{% for agg in aggregations.others %}<li><a href="{{ agg.get_absolute_url }}">{{ agg.name }}</a></li>{% endfor %}</ul></details></li>{% endif %}{% endfor %}</ul></span>
+        {% if not has_subscriptions %}<div class="showing-aggregations">You have no subscriptions, viewing default aggregations.</div>{% endif %}
+        <div class="showing-aggregations">Showing stories from <ul class="inline-comma-sep-list">{% for agg in aggregations.list %}<li><a href="{{ agg.get_absolute_url }}">{{ agg.name }}</a></li>{% if forloop.last and aggregations.others %}<li><details><summary>{{ aggregations.others|length }} others</summary>:<ul class="inline-comma-sep-list">{% for agg in aggregations.others %}<li><a href="{{ agg.get_absolute_url }}">{{ agg.name }}</a></li>{% endfor %}</ul></details></li>{% endif %}{% endfor %}</ul></div>
     {% elif aggregation %}
-        <span class="showing-aggregations">Showing stories from <a href="{{ aggregation.get_absolute_url }}">{{ aggregation.name }}</a></span>
+        <div class="showing-aggregations">Showing stories from <a href="{{ aggregation.get_absolute_url }}">{{ aggregation.name }}</a></div>
     {% else %}
-        {% if not has_subscriptions and request.user.is_authenticated %}<span class="showing-aggregations">You have no subscriptions, and there are no default tag aggregations available. Viewing all stories instead. <a href="{% url 'new_aggregation' %}">Create one</a> or <a href="{% url 'public_aggregations' %}">browse public ones from other users</a>.</span>{% elif not request.user.is_authenticated %}<span class="showing-aggregations">There are no default tag aggregations available. Viewing all stories.</span>{% endif %}
+        {% if not has_subscriptions and request.user.is_authenticated %}<div class="showing-aggregations">You have no subscriptions, and there are no default tag aggregations available. Viewing all stories instead. <a href="{% url 'new_aggregation' %}">Create one</a> or <a href="{% url 'public_aggregations' %}">browse public ones from other users</a>.</div>{% elif not request.user.is_authenticated %}<div class="showing-aggregations">There are no default tag aggregations available. Viewing all stories.</div>{% endif %}
     {% endif %}
     <ul class="posts">
         {% for story in stories %}
