--- a/sic/templates/story.html
+++ b/sic/templates/story.html
@@ -33,7 +33,7 @@
         </header>
         <a href="{{story.url}}">{{ story.url }}</a>
         {% if story.description %}
-            <main>{{ story.description_to_html }}</main>
+            {{ story.description_to_html }}
         {% endif %}
     </article>
     {% if request.user.is_authenticated %}
@@ -51,7 +51,7 @@
                 <input type="submit" value="Submit">
                 <details class="formatting-help">
                     <summary>Formatting help</summary>
-                    <span>{% include "markdown_help.html" %}</span>
+                    <div>{% include "markdown_help.html" %}</div>
                 </details>
             </div>
         </form>
