--- a/sic/templates/taggregation.html
+++ b/sic/templates/taggregation.html
@@ -107,7 +107,7 @@
                 </tr>
             </table>
             <div class="tag-graph-svg">
-                <img src="{% url 'tag_graph_svg' %}?{% for tag in taggregation.tags.all %}tags={{ tag.pk }}{% if not forloop.last %}&{% endif %}{% endfor %}">
+                <img src="{% url 'tag_graph_svg' %}?{% for tag in taggregation.vertices %}tags={{ tag.pk }}{% if not forloop.last %}&{% endif %}{% endfor %}">
             </div>
         </div>
         <hr />
