Split templates/ into subdirectories

--- a/sic/templates/account/bookmarks.html
+++ b/sic/templates/account/bookmarks.html
@@ -11,9 +11,9 @@
     <ul class="posts">
         {% for b in bookmarks %}
             {% if b.is_story %}
-                {% include "story_list_item.html" with story=b.story %}
+                {% include "posts/story_list_item.html" with story=b.story %}
             {% else %}
-                {% include "comment.html" with comment=b.comment reply_form=reply_form shallow=True level=0 %}
+                {% include "posts/comment.html" with comment=b.comment reply_form=reply_form shallow=True level=0 %}
             {% endif %}
             <li class="bookmark-annotation">
                 <table>
