--- a/sic/templates/account/profile_posts.html
+++ b/sic/templates/account/profile_posts.html
@@ -6,9 +6,9 @@
     <ul class="posts">
         {% for post in posts %}
             {% if post.is_story %}
-                {% include "story_list_item.html" with story=post %}
+                {% include "posts/story_list_item.html" with story=post %}
             {% else %}
-                {% include "comment.html" with comment=post reply_form=reply_form shallow=True level=0 %}
+                {% include "posts/comment.html" with comment=post reply_form=reply_form shallow=True level=0 %}
             {% endif %}
         {% endfor %}
     </ul>
