--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -13,7 +13,7 @@
     {% endif %}
     <ul class="posts">
         {% for story in stories %}
-            {% include "story_list_item.html" with story=story %}
+            {% include "posts/story_list_item.html" with story=story %}
         {% endfor %}
     </ul>
     <div class="pagination">
