--- a/sic/templates/posts/all_stories.html
+++ b/sic/templates/posts/all_stories.html
@@ -20,7 +20,7 @@
     {% endif %}
     <ul class="posts">
         {% for story in stories %}
-            {% include "story_list_item.html" with story=story %}
+            {% include "posts/story_list_item.html" with story=story %}
         {% endfor %}
     </ul>
     <div class="pagination">
