--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -47,11 +47,10 @@
         {% spaceless %}
             <header>
                 <div class="logo">
-                    <span><a href="{% url 'index' %}">sic</a></span>
+                    <a href="{% url 'index' %}">sic</a>
                 </div>
                 <nav class="main menu">
                     <ul>
-                        <li><a href="{% url 'index' %}" id="home_link">Home</a></li>
                         <li><a href="{% url 'all_stories' %}" id="all_stories_link">All stories</a></li>
                         <li><a href="{% url 'recent_comments' %}" id="recent_comments_link">Comments</a></li>
                         <li><a href="{% url 'public_aggregations' %}" id="aggregations_link">Aggregations</a></li>
@@ -67,7 +66,7 @@
                                     <li class="notification"><a href="{% url 'notifications' %}">{{ notifications|length }} notification{{ notifications|pluralize }}</a></li>
                                 {% endif %}
                             {% endwith %}
-                            <li class="username"><a href="{% url 'account' %}" id="username_link">{{ request.user }}</a></li>
+                            <li class="account"><a href="{% url 'account' %}" id="account_link">Account</a></li>
                             <li><a href="{% url 'submit' %}" id="submit_link">Post</a></li>
                             <li><a href="{% url 'inbox' %}" id="inbox_link">Inbox{% if unread_messages and unread_messages > 0 %} ({{ unread_messages }}){% endif %}</a></li>
                             <li><a href="{% url 'logout' %}" id="logout_link">Logout</a></li>
