--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -550,6 +550,23 @@ a.title {
  hyphens: auto;
 }
 
+div.context-warning:before{
+  content: "context warning";
+  position: absolute;
+  font-size: 80%;
+  transform: translateY(-100%);
+}
+
+.context-warning a.title,
+.context-warning span.netloc {
+  filter: grayscale(100%) opacity(50%) blur(2.5px);
+}
+
+.context-warning input[type="checkbox"]:checked ~ a.title,
+.context-warning input[type="checkbox"]:checked ~ span.netloc {
+  filter: none;
+}
+
 body>main>ul.posts>li.story .links{
   grid-area: links;
 }
