--- a/sic/templates/posts/submit.html
+++ b/sic/templates/posts/submit.html
@@ -48,6 +48,12 @@
                 <summary>Formatting help</summary>
                 <span>{% include "posts/markdown_help.html" %}</span>
             </details>
+            {{ form.context_warning.errors }}
+            {{ form.context_warning.label_tag }}
+            {% if form.context_warning.help_text %}
+                <p class="help-text">{{ form.context_warning.help_text }}</p>
+            {% endif %}
+            {{ form.context_warning }}
         </fieldset>
         <fieldset>
             <legend>metadata</legend>
