--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -4,7 +4,8 @@
 {% block title %}sic{% endblock %}
 {% block content %}
     {% if aggregations %}
-        {% if not has_subscriptions %}<div class="showing-aggregations">You have no subscriptions, viewing default aggregations.</div>{% endif %}
+        {% if not has_subscriptions and request.user.is_authenticated %}<div class="showing-aggregations">You have no subscriptions, viewing default aggregations.</div>
+        {% elif not has_subscriptions %}<div class="showing-aggregations">You are not logged in, viewing default aggregations.</div>{% endif %}
         <div class="showing-aggregations">Showing stories from <ul class="inline-comma-sep-list">{% for agg in aggregations|slice:":5" %}<li><a href="{{ agg.get_absolute_url }}">{{ agg.name }}</a></li>{% if forloop.last and aggregations|length > 5 %}<li><details><summary>{{ aggregations|slice:"5:"|length }} others</summary>:<ul class="inline-comma-sep-list">{% for agg in aggregations|slice:"5:" %}<li><a href="{{ agg.get_absolute_url }}">{{ agg.name }}</a></li>{% endfor %}</ul></details></li>{% endif %}{% endfor %}</ul></div>
     {% elif aggregation %}
         <div class="showing-aggregations">Showing stories from <a href="{{ aggregation.get_absolute_url }}">{{ aggregation.name }}</a></div>
