Align profile link in menu right

--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -1343,6 +1343,10 @@ blockquote.message_body {
     text-align: center;
   }
 
+  nav.menu ul>li.profile {
+    margin-left: auto;
+  }
+
   nav.main.menu {
     width: 40vw;
   }
