--- a/sic/templates/posts/story_list_item.html
+++ b/sic/templates/posts/story_list_item.html
@@ -19,15 +19,15 @@
         </div>
         <div class="title{% if story.context_warning %} context-warning{% endif %}">
             {% if story.context_warning %}
-                <label for="context-warning-{{ story.pk }}">{{ story.context_warning }}</label>
-                <input id="context-warning-{{ story.pk }}" type="checkbox"{% if show_stories_with_context_warning %} checked="checked"{% endif %}>
+                <label for="context-warning-{{ story.pk }}">{{ story.context_warning }}</label>&#32;
+                <input id="context-warning-{{ story.pk }}" type="checkbox"{% if show_stories_with_context_warning %} checked="checked"{% endif %}>&#32;
             {% endif %}
-            <a href="{{story.get_listing_url}}" class="title">{{ story.title }}</a>
+            <a href="{{story.get_listing_url}}" class="title">{{ story.title }}</a>&#32;
             {% with story.get_domain as domain %}{% if domain is None %}<span class="netloc">{{ domain|default_if_none:"text" }}</span>{% else %}<span class="netloc"><a href="{{ domain.get_absolute_url }}">{{ domain }}</a></span>{% endif %}{% endwith %}
-            {% if story.publish_date %}<span>Published: <time datetime="{{ story.publish_date | date:"Y-m-d" }}" title="{{ story.publish_date }}">{{ story.publish_date|naturalday }}</time></span>{% endif %}
-            {% include "posts/story_tags.html" with tags=story.tags.all %}
-            {% if DEBUG %}
-                <details>
+            {% if story.publish_date %}&#32;<span>Published: <time datetime="{{ story.publish_date | date:"Y-m-d" }}" title="{{ story.publish_date }}">{{ story.publish_date|naturalday }}</time></span>{% endif %}&#32;
+            {% include "posts/story_tags.html" with tags=story.tags.all inline=True %}
+            {% if False and DEBUG %}
+                &#32;<details style="display: inline-block;">
                     <summary>hotness info</summary>
                     {{ story.hotness|pprint }}
                 </details>
