--- a/sic/templates/posts/story_tags.html
+++ b/sic/templates/posts/story_tags.html
@@ -1,5 +1,5 @@
 {% spaceless %}
-    <ul class="tags">
+    <ul class="tags{% if inline %} inline{% endif %}">
         {% for tag in tags %}
             <li class="tag" style="{% if show_colors %}{{ tag.color_vars_css }}{% endif %}"><span class="tag-name"><a href="{{ tag.get_absolute_url }}"{% if in_article %} rel="tag"{% endif %}>{{ tag.name }}</a></span></li>
         {% endfor %}
